--- a/src/main/webapp/dialog/qtdetaildialog.xhtml
+++ b/src/main/webapp/dialog/qtdetaildialog.xhtml
@@ -47,9 +47,8 @@
 				</p:column>
 
 
-				<p:column style="text-align: center;width:auto">
-					<p:commandButton value="เลือก" process="data"
-						actionListener="#{poBean.closeDialog}"></p:commandButton>
+				<p:column  headerText="เลือก" style="text-align: center;width:auto">
+					
 				</p:column>
 
 			</p:dataTable>
