User Dialog Add Employee

--- a/src/main/webapp/qt/addProduct.xhtml
+++ b/src/main/webapp/qt/addProduct.xhtml
@@ -25,7 +25,7 @@
 			</p:inputText>
 
 			<p:outputLabel  value="เลือกพนักงาน  :" />
-			<p:commandButton value="เลือก" action="#{qtBean.selectEmployee}"
+			<p:commandButton value="เลือก" action="#{dialogFunction.selectEmployee}"
 				process="@this">
 			</p:commandButton>
 
